recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: not found: value tourne
    avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ; tourne(90)
                 ^FourSquare:4: error: not found: value tourne
    avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ; tourne(90)
                                          ^FourSquare:4: error: not found: value tourne
    avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ; tourne(90)
                                                                   ^FourSquare:4: error: not found: value tourne
    avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ; tourne(90)
                                                                                            ^FourSquare:4: error: not found: value tourne
    avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ; tourne(90)
                                                                                                         ^