recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() 
{
  for (i<- 0 to 4) {
    avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ;avance(100); tourne(90) ; tourne(90)
  }
  
  
}